# ITCH

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  benchmark.cpp
cmake/: third_party.cmake
include/: itch_parser.hpp
src/: itch_parser.cpp  main.cpp
